# rouk

./: .env  .gitignore  .python-version  README.md  omxplayer.py  package-lock.json  package.json  requirements.txt  rouk.py  rouk.service  rouk.sh  run.sh  setup.cfg  vue.config.js
rouk/: __init__.py  db.py  update_library.py  utils.py  views.py
rouk/player/: __init__.py  update_library.py
rouk/static/: index.html  manifest.json  precache-manifest.822ea51fa2643fc603e7a6bc4c69bc7c.js  precache-manifest.a9e158ef6b2d6465744519e8a3e94487.js  precache-manifest.abab830871c4c9e03cc8ac713667355d.js  precache-manifest.b40df8a603ab91494163a9c412180827.js  precache-manifest.b99fa4f78e0736d65da85c54023534a0.js  precache-manifest.ca4bd7276ca4fa88fff1dbefa79d9186.js  service-worker.js
rouk/views/: album.py  artist.py  commands.py  play.py  playlist.py  song.py  stream.py
src/: App.vue  main.js  router.js  sse.js  store.js  utils.js
src/components/: ADropdown.vue  AInput.vue  AList.vue  AModal.vue  AOverlay.js  APlayer.vue  APlaylistSong.vue  APlaylistSongModal.vue  APortal.js  ASearchBar.vue  ASongBar.vue  player.vue
src/icons/: angleDoubleDown.vue  angleDoubleUp.vue  angleDown.vue  angleUp.vue  caretDown.vue  clear.vue  dotsV.vue  home.vue  last.vue  list.vue  minus.vue  next.vue  pause.vue  play.vue  plus.vue  random.vue  repeat.vue  search.vue  update.vue  volume.vue
src/layouts/: MainLayout.vue
src/router/: index.js
src/store/: index.js
src/views/: Album.vue  Artist.vue  Home.vue  Library.vue  NotFound.vue  Song.vue  (+2 more)
tests/: conftest.py  test_update_library.py
(+17 files in other folders)
