[metadata]
name = rouk
version = 1.0.0
license = BSD-3-Clause
maintainer = Andrés Felipe Sierra Parra
maintainer_email = cepfelo@gmail.com
description = Neo4j and Flask music player.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    rouk